--- a/style.css
+++ b/style.css
@@ -1,9 +1,29 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .container {
   width: 400px;
+  height: 200px;
   background-color: green;
   padding: 5px;
 }
 .header {
   max-width: 100%;
   background-color: grey;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+}
+.form-container {
+  background-color: white;
+}
+.form-container div {
+  display: inline-block;
+  width: 50%;
+}
+.button-submit {
+  display: block;
+  width: 100%;
 }
