--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 .container {
   width: 400px;
-  height: 200px;
+  height: 300px;
+  margin: 0 auto;
   background-color: green;
   padding: 5px;
 }
@@ -13,17 +14,32 @@
   max-width: 100%;
   background-color: grey;
   height: 50px;
+  border-radius: 5px;
   text-align: center;
   line-height: 50px;
+  font-size: 15px;
 }
 .form-container {
   background-color: white;
+  border-radius: 5px;
 }
 .form-container div {
   display: inline-block;
   width: 50%;
+  padding: 15px;
 }
 .button-submit {
   display: block;
   width: 100%;
+}
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.form-container h2 {
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+.input-holder {
+  
 }
